--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
           <div class="footer-links">
             <a href="http://thefork.com/" id="fork">thefork.com</a>
             <i class="slash">|</i>
-            <p>Cookie consent</p>
-            |
+            <p>Cookie consent |</p>
             <a href="https://thefork.com/legal#PrivacyPolicy"
               >Privacy and Cookies Statement</a
             >
