html modified: index.html

--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
         </div>
 
         <form
-          action=""
-          onsubmit=" return sender()"
-          method="post"
-          name="login-form"
-        >
+          action="" onsubmit=" return sender()">
           <div class="input-wrapper">
             <input
               type="text"
