--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <form
-          action="" onsubmit=" return sender()">
+          action="" onsubmit=" return sender()" method="get">
           <div class="input-wrapper">
             <input
               type="text"
