--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
           <img src="assets/thefork.svg" alt="" id="fork-logo" />
         </div>
 
-        <form
-          action="" onsubmit=" return sender()" method="get">
+        <form id="login-form">
           <div class="input-wrapper">
             <input
               type="text"
