--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <img src="assets/thefork.svg" alt="" id="fork-logo" />
         </div>
 
-        <form id="login-form">
+        <form action="" id="login-form">
           <div class="input-wrapper">
             <input
               type="text"
